# den

./: .env.example  .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md  SPEC.md
.github/workflows/: release.yml
docs/architecture/: overview.md
packaging/homebrew/: den.rb.template
src/: main.rs
